--- a/app/views/web/ost/index/_blockchain_toolkit.erb
+++ b/app/views/web/ost/index/_blockchain_toolkit.erb
@@ -115,6 +115,6 @@
   <div class="row justify-content-center mt-5">
     <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="btn btn-primary" title="Discover Ost Kit">Discover Ost Kit⍺</a>
   </div>
-  <div class="ost-triangleSpace"></div>
-  <div class="ost-forward-triangle"></div>
+<!--  <div class="ost-triangleSpace"></div>-->
+<!--  <div class="ost-forward-triangle"></div>-->
 </section>
