--- a/app/views/web/ost/index.html.erb
+++ b/app/views/web/ost/index.html.erb
@@ -2,8 +2,11 @@
 <%#= render :partial => "/shared/web/common/navbar" %>
 <%= render :partial => "/shared/web/common/navbarsubmenu" %>
 <%= render :partial => "/web/ost/index/jumbotron" %>
+<%= render :partial => "/web/ost/index/jumbotron_mobile" %>
 <%= render :partial => "/web/ost/index/events_carousel" %>
 <%#= render :partial => "/web/ost/index/partners" %>
+<%= render :partial => "/web/ost/index/liquidity_token_exchange"%>
+<%= render :partial => "/web/ost/index/liquidity_token_exchange_mobile"%>
 <%= render :partial => "/web/ost/index/news_carousel" %>
 <%= render :partial => "/web/ost/index/roadmap" %>
 <%= render :partial => "/web/ost/index/blockchain_toolkit" %>
