--- a/app/views/web/ost/index/_jumbotron.erb
+++ b/app/views/web/ost/index/_jumbotron.erb
@@ -1,4 +1,4 @@
-<section class="container-jumbotron py-5">
+<section class="container-jumbotron py-5 d-none d-md-block">
   <div class="container">
     <div class="row align-items-center">
 
