--- a/app/views/web/ost/index.html.erb
+++ b/app/views/web/ost/index.html.erb
@@ -5,7 +5,8 @@
 <%= render :partial => "/web/ost/index/events_carousel" %>
 <%#= render :partial => "/web/ost/index/partners" %>
 <%= render :partial => "/web/ost/index/news_carousel" %>
-<%= render :partial => "/web/ost/index/blockchain_toolkit" %>
+<%= render :partial => "/web/ost/index/blockchain_infra" %>
+<%#= render :partial => "/web/ost/index/blockchain_toolkit" %>
 <%#= render :partial => "/web/ost/index/openst_technology" %>
 <%= render :partial => "/web/ost/index/ost_kit" %>
 <%= render :partial => "/web/ost/index/roadmap" %>
