blockchain infrastructure changes to triangle css

--- a/app/assets/stylesheets/web/common/_common.scss
+++ b/app/assets/stylesheets/web/common/_common.scss
@@ -13,3 +13,19 @@ a {
   margin-top: 15px;
   border-bottom: 1px solid $skeptic;
 }
+
+
+.back-angled-edge{
+  &:after {
+    background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHZpZXdCb3g9JzAgMCAxMDAgMTAwJyBmaWxsPScjMzQ0NDViJyBwcmVzZXJ2ZUFzcGVjdFJhdGlvPSdub25lJz48cG9seWdvbiBwb2ludHM9JzAsMCAxMDAsMTAwIDEwMCwwJyAvPjwvc3ZnPg==");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    content: '';
+    height: 5vw;
+    width: 100%;
+    position: absolute;
+    bottom: -5vw;
+    z-index: 1;
+  }
+}
