--- a/app/views/web/ost/index/_buy_ost.erb
+++ b/app/views/web/ost/index/_buy_ost.erb
@@ -6,72 +6,48 @@
         <div class="col-12">
           <h1 class="title mt-4">Where to <span>Buy $OST</span></h1>
           <p class="my-4">$OST is a cryptocurrency that can be used for staking against minting Branded Tokens within the OpenST protocol and also as a payment method in OST solutions.</p>
-          <div class="row justify-content-center">
+          <div class="row">
             <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
-              <a class="d-inline-block" href="https://www.okex.com/" target="_blank" title="Buy OST on Okex">
+              <a class="d-block my-4" href="https://www.okex.com/" target="_blank" title="Buy OST on Okex" >
                 <span class="buy-ost-okex-icon"></span>
               </a>
-              <div class="btn-container mt-4 mb-5">
-                <a href="https://www.okex.com/" target="_blank" class="btn btn-primary" title="BUY NOW">BUY NOW</a>
-              </div>
             </div>
             <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
-              <a class="d-inline-block" href="https://www.binance.com/trade.html?symbol=OST_ETH" target="_blank" title="Buy OST on Binance">
+              <a class="d-block my-4" href="https://www.binance.com/trade.html?symbol=OST_ETH" target="_blank" title="Buy OST on Binance" >
                 <span class="buy-ost-binance-icon"></span>
               </a>
-              <div class="btn-container mt-4 mb-5">
-                <a href="https://www.binance.com/trade.html?symbol=OST_ETH" target="_blank" class="btn btn-primary" title="BUY NOW">BUY NOW</a>
-              </div>
             </div>
             <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
-              <a class="d-inline-block" href="https://www.hbg.com/ost_eth/exchange/" target="_blank" title="Buy OST on Huobi">
+              <a class="d-block my-4" href="https://www.hbg.com/ost_eth/exchange/" target="_blank" title="Buy OST on Huobi" >
                 <span class="buy-ost-huobi-icon"></span>
               </a>
-              <div class="btn-container mt-4 mb-5">
-                <a href="https://www.hbg.com/ost_eth/exchange/" target="_blank" class="btn btn-primary" title="BUY NOW">BUY NOW</a>
-              </div>
             </div>
 
             <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
-              <a class="d-inline-block" href="https://www.upbit.com/" target="_blank" title="Buy OST on Upbit">
+              <a class="d-block my-4" href="https://www.upbit.com/" target="_blank" title="Buy OST on Upbit" >
                 <span class="buy-ost-upbit-icon"></span>
               </a>
-              <div class="btn-container mt-4 mb-5">
-                <a href="https://www.upbit.com/" target="_blank" class="btn btn-primary" title="BUY NOW">BUY NOW</a>
-              </div>
             </div>
             <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
-              <a class="d-inline-block" href="https://www.coinsuper.com/cointrade?symbol=OST%2FBTC" target="_blank" title="Buy OST on Coinsuper">
+              <a class="d-block my-4" href="https://www.coinsuper.com/cointrade?symbol=OST%2FBTC" target="_blank" title="Buy OST on Coinsuper" >
                 <span class="buy-ost-coin-super-icon"></span>
               </a>
-              <div class="btn-container mt-4 mb-5">
-                <a href="https://www.coinsuper.com/cointrade?symbol=OST%2FBTC" target="_blank" class="btn btn-primary" title="BUY NOW">BUY NOW</a>
-              </div>
             </div>
             <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
-              <a class="d-inline-block" href="https://www.idcm.io/trading/OST_BTC" target="_blank" title="Buy OST on IDCM">
+              <a class="d-block my-4" href="https://www.idcm.io/trading/OST_BTC" target="_blank" title="Buy OST on IDCM" >
                 <span class="buy-ost-idcm-icon"></span>
               </a>
-              <div class="btn-container mt-4 mb-5">
-                <a href="https://www.idcm.io/trading/OST_BTC" target="_blank" class="btn btn-primary" title="BUY NOW">BUY NOW</a>
-              </div>
             </div>
 
             <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
-              <a class="d-inline-block" href="https://kyber.network/swap/eth_knc" target="_blank" title="Buy OST on Kyber">
+              <a class="d-block my-4" href="https://kyber.network/swap/eth_knc" target="_blank" title="Buy OST on Kyber" >
                 <span class="buy-ost-kyber-icon"></span>
               </a>
-              <div class="btn-container mt-4 mb-5">
-                <a href="https://kyber.network/swap/eth_knc" target="_blank" class="btn btn-primary" title="BUY NOW">BUY NOW</a>
-              </div>
             </div>
             <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
-              <a class="d-inline-block" href="https://international.bittrex.com/Market/Index?MarketName=BTC-OST" target="_blank" title="Buy OST on Bittrex">
+              <a class="d-block my-4" href="https://international.bittrex.com/Market/Index?MarketName=BTC-OST" target="_blank" title="Buy OST on Bittrex" >
                 <span class="buy-ost-bittrex-icon"></span>
               </a>
-              <div class="btn-container mt-4 mb-5">
-                <a href="https://international.bittrex.com/Market/Index?MarketName=BTC-OST" target="_blank" class="btn btn-primary" title="BUY NOW">BUY NOW</a>
-              </div>
             </div>
           </div>
 
