play button fix

--- a/app/assets/stylesheets/web/ost/index/Jumbotron.scss
+++ b/app/assets/stylesheets/web/ost/index/Jumbotron.scss
@@ -102,9 +102,9 @@ h1, h2, h3, h4, h5, h6{
     .illustration{
       .btn-play{
         .play{
-          width: 30px;
-          height: 30px;
-          margin-left: 5px;
+          width: 15px;
+          height: 15px;
+          //margin-left: 5px;
           padding: 0;
         }
       }
