--- a/app/views/web/ost/index/_jumbotron_mobile.erb
+++ b/app/views/web/ost/index/_jumbotron_mobile.erb
@@ -21,6 +21,16 @@
         </div>
         <div class="col-8 text-center mt-3 mt-md-0">
           <div class="illustration w-100">
+            <div class="btn-secondary btn btn-play" title="Watch Intro" data-toggle="modal" data-target="#helpVideoModal" data-src="https://www.youtube.com/embed/yJswJcnLYpU">
+              <div class="play align-middle">
+                <svg class="svg">
+                  <switch>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-play"></use>
+                  </switch>
+                </svg>
+              </div>
+              <span class="align-middle"></span>
+            </div>
             <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-hero-illustration-1x.png" srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-hero-illustration-2x.png 1000w" class="img-fluid position-relative" alt="Simple Token Play Video"/>
           </div>
         </div>
