--- a/app/views/web/ost/index/_jumbotron_mobile.erb
+++ b/app/views/web/ost/index/_jumbotron_mobile.erb
@@ -12,10 +12,10 @@
       <div class="row">
         <div class="col-4 ">
           <div class="col-12 ">
-            <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="btn btn-primary my-2 equal-width smooth-scroll" title="Discover OST KIT⍺">How it works</a>
+            <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="btn btn-primary my-2  smooth-scroll" title="Discover OST KIT⍺">How it works</a>
           </div>
           <div class="col-12 ">
-            <a href="/partners" class="btn btn-secondary my-2 equal-width smooth-scroll" title="Meet Our Partners">Develop with us</a>
+            <a href="/partners" class="btn btn-secondary my-2  smooth-scroll" title="Meet Our Partners">Develop with us</a>
           </div>
 
         </div>
