--- a/app/views/web/ost/index/_liquidity_token_exchange_mobile.erb
+++ b/app/views/web/ost/index/_liquidity_token_exchange_mobile.erb
@@ -1,22 +1,23 @@
 <section class="container-fluid liquidity-container-wrapper  d-md-none">
-  <div class="container">
-    <div class="row py-5">
-      <div class="col-12 ">
-        <h3 class="white-header">Liquidity Branded Token Exchange  </h3>
-        <p class="mt-4">
-          OST Branded Token Exchange “BTEX” will facilitate easy exchange of BT for other currencies. For providing fast liquidity OST will will serve as the market maker intially with other market makers joining in time.
-        </p>
-
-      </div>
-      <div class="row container">
-        <div class="col-6">
-          <button class="btn btn-primary mt-3" title="read more"> read more </button>
+  <div class="row back-angled-edge">
+    <div class="container">
+      <div class="row py-5 ">
+        <div class="col-12 ">
+          <h3 class="white-header">Liquidity Branded Token Exchange  </h3>
+          <p class="mt-4">
+            OST Branded Token Exchange “BTEX” will facilitate easy exchange of BT for other currencies. For providing fast liquidity OST will will serve as the market maker intially with other market makers joining in time.
+          </p>
         </div>
+        <div class="row container ">
+          <div class="col-6">
+            <button class="btn btn-primary mt-3" title="read more"> read more </button>
+          </div>
 
-        <div class="col-6">image goes here</div>
+          <div class="col-6">image goes here</div>
+        </div>
       </div>
     </div>
+
   </div>
-  <div class="ost-triangleSpace"></div>
-  <div class="ost-forward-triangle"></div>
+
 </section>
