--- a/app/views/web/ost/index/_liquidity_token_exchange.erb
+++ b/app/views/web/ost/index/_liquidity_token_exchange.erb
@@ -1,22 +1,24 @@
 
 
-<section class="container-fluid liquidity-container-wrapper d-none d-md-block">
-  <div class="ost-triangleSpace"></div>
-  <div class="ost-forward-triangle-top"></div>
-  <div class="container">
-    <div class="row py-5">
-      <div class="col-md-7">
+<section class="container-fluid liquidity-container-wrapper  d-none d-md-block">
+ <div class="row ">
+   <div class="container">
+     <div class="row py-5">
+       <div class="col-md-7">
 
-      </div>
-      <div class="col-md-5 my-auto">
-        <h3 class="white-header">Liquidity Branded Token Exchange  </h3>
-        <p class="mt-4">
-          OST Branded Token Exchange “BTEX” will facilitate easy exchange of BT for other currencies. For providing fast liquidity OST will will serve as the market maker intially with other market makers joining in time.
-        </p>
-        <button class="btn btn-primary mt-3" title="read more"> read more </button>
-      </div>
-    </div>
-  </div>
+       </div>
+       <div class="col-md-5 my-auto">
+         <h3 class="white-header">Liquidity Branded Token Exchange  </h3>
+         <p class="mt-4">
+           OST Branded Token Exchange “BTEX” will facilitate easy exchange of BT for other currencies. For providing fast liquidity OST will will serve as the market maker intially with other market makers joining in time.
+         </p>
+         <button class="btn btn-primary mt-3" title="read more"> read more </button>
+       </div>
+     </div>
+   </div>
+
+ </div>
+
 
 
 </section>
