partners section changes

--- a/app/assets/stylesheets/web/ost-index.css
+++ b/app/assets/stylesheets/web/ost-index.css
@@ -12,6 +12,7 @@
  *= require web/ost/index/EventsCarousel
  *= require web/ost/index/Technology
  *= require web/ost/index/BlockchainInfra
+  *= require web/ost/index/Partners
  *= require plugins/slick/slick
  *= require plugins/slick/slick-theme
 
