--- a/app/views/web/ost/index/_partners.erb
+++ b/app/views/web/ost/index/_partners.erb
@@ -1,31 +1,17 @@
-<section class="container container-token-buy">
-
-  <div class="row">
-    <a href="<%= GlobalConstant::Base.root_url %>partners" class="partners">
-      <span class="btn btn-primary partners-Button">Meet OST Partners</span>
-      <ul class="list-unstyled my-4 w-100" style="background-color: #fff">
-        <li class="col-6 col-md-2 my-2">
-            <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/unsplash-logo@3x.png" class="img-fluid"/>
-        </li>
-        <li class="col-6 col-md-2 my-2">
-          <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/treat-logo-1@3x.png" class="img-fluid"/>
-        </li>
-        <li class="col-6 col-md-2 my-2">
-          <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/lgbt-logo-1@3x.png" class="img-fluid"/>
-        </li>
-        <li class="col-6 col-md-2 my-2">
-            <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/lytepay-logo@3x.png" class="img-fluid"/>
-        </li>
-
-        <li class="col-6 col-md-2 my-2">
-            <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/korhal-logo-1@3x.jpg" class="img-fluid"/>
-        </li>
-
-        <li class="col-6 col-md-2 my-2">
-            <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/licenserocks-logo@3x.png" class="img-fluid"/>
-        </li>
-      </ul>
-    </a>
+<section class="container-fluid container-partners py-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 col-lg-6">
+        <h2 class="header-blue-900">OST Partners</h2>
+        <p>
+          Billions of App Actions
+          Connecting Hundreds Of Millions Of Users
+        </p>
+        <a href="/partners" class="btn btn-primary my-2 my-md-3" title="Meet OST partners">MEET OST PARTNERS</a>
+        <a href="" class="btn btn-secondary my-2 ml-md-3" title="Discover POCs">DISCOVER POCS</a>
+      </div>
+      <div class="col-md-12 col-lg-6">
+      </div>
+    </div>
   </div>
-
 </section>
