--- a/app/views/web/ost/index.html.erb
+++ b/app/views/web/ost/index.html.erb
@@ -4,16 +4,13 @@
 <%= render :partial => "/web/ost/index/jumbotron" %>
 <%= render :partial => "/web/ost/index/jumbotron_mobile" %>
 <%= render :partial => "/web/ost/index/events_carousel" %>
-<%#= render :partial => "/web/ost/index/partners" %>
-
 <%= render :partial => "/web/ost/index/news_carousel" %>
 <%= render :partial => "/web/ost/index/blockchain_infra" %>
-<%#= render :partial => "/web/ost/index/blockchain_toolkit" %>
-<%#= render :partial => "/web/ost/index/openst_technology" %>
 <%= render :partial => "/web/ost/index/ost_kit" %>
-<%= render :partial => "/web/ost/index/roadmap" %>
+<%= render :partial => "/web/ost/index/partners" %>
 <%= render :partial => "/web/ost/index/liquidity_token_exchange"%>
 <%= render :partial => "/web/ost/index/liquidity_token_exchange_mobile"%>
+<%= render :partial => "/web/ost/index/roadmap" %>
 <%= render :partial => "/web/ost/index/mission" %>
 <%= render :partial => "/web/ost/index/subscribe" %>
 <%= render :partial => "/web/ost/index/ost_team" %>
