--- a/app/views/web/ost/index/_buy_ost.erb
+++ b/app/views/web/ost/index/_buy_ost.erb
@@ -1,7 +1,7 @@
-<section class="container container-token-buy py-md-5" id="token">
+<section class="container-fluid container-token-buy py-md-5" id="token">
 
   <div class="row">
-    <div class="col-12 col-md-10 mx-auto">
+    <div class="container col-12 col-md-10 mx-auto">
       <div class="row text-center">
         <div class="col-12">
           <h1 class="title mt-4">Where to <span>Buy $OST</span></h1>
